<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:padding="32dp">

    <EditText
        android:id="@+id/nameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:hint="@string/new_name"/>

    <EditText
        android:id="@+id/startTimeAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameAdd"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:hint="@string/new_start_time"/>

    <EditText
        android:id="@+id/finishTimeAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/startTimeAdd"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:hint="@string/new_finish_time"/>

    <EditText
        android:id="@+id/FIOAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/finishTimeAdd"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:hint="@string/FIO"/>

    <EditText
        android:id="@+id/roomAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/FIOAdd"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:inputType="number"
        android:hint="@string/new_room"/>

    <Button
        android:id="@+id/addNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/roomAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        android:text="@string/add"/>

</android.support.constraint.ConstraintLayout>